hphp/test/zend/bad/ext/standard/tests/general_functions/getopt_004.php
<?php
ini_set('variables_order', GPS);

ini_set('register_argc_argv', On);

	var_dump(getopt("v::", array("v::")));
?>